scala-project/src/main/scala/example/example.worksheet.sc
1 + 1

val x = 42

x * x

"Hello, World!".length

1.+(2.*(3))

val houseAreaInSqMeters = 5 * 3
val doorAreaInSqMeters = 1 * 2
val paintAreaInSqMeters = houseAreaInSqMeters - doorAreaInSqMeters

(1 < 2) && (2 < 3)

// val a = 1 / 01 // error: zero division

// val a = 1 && "Sound and vision" // Does not compile
